--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -24,15 +25,32 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
-    compile group: 'com.restfb', name: 'restfb', version: '2.0.0-rc.1'
+//    compile group: 'com.restfb', name: 'restfb', version: '2.0.0-rc.1'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
-    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.6'
+//    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.6'
 
-    compile 'ch.qos.logback:logback-classic:1.1.10'
+//    compile 'com.android.support:appcompat-v7:25.3.1'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //    compile 'com.android.support:design:25.3.1'
+
+    //    compile 'com.android.volley:volley:1.0.0'
+
+//compile  'ch.qos.logback:logback-classic:1.1.10'
+//    compile    'com.facebook.android:facebook-android-sdk:[4,5)' +
+//            ''compile
+//    'com.android.support.constraint:constraint-layout:1.0.2'compile
+//    'com.android.support:design:25.3.1'testCompile
+//'junit:junit:4.12'}
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.18.0'
+    compile 'com.android.support:design:25.0.1'
+    testCompile 'junit:junit:4.12'
+
 }
