--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.facebook.android:facebook-android-sdk:4.18.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
 
